--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: scibian-singularity-ssh
-Section: net
+Section: scibian
 Priority: optional
 Maintainer: Scibian Project <packaging@scibian.org>
 Build-Depends: debhelper (>= 9)
